Fix: Fix button icon alignment

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -41,6 +41,7 @@ a{
         background-color: $clr-yellow;
         border-radius: 50px;
         width: fit-content;
+        align-items: center;
     }
 }
 
